fixed google map alignment

--- a/css/module/map.css
+++ b/css/module/map.css
@@ -8,7 +8,7 @@
   display: none;
 }
 
-.map-holder a{
+#city-view-link{
   text-align: left;
   margin-left: 4px;
   position: absolute;
